style.css
.typing-text {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-size: 88px;
    font-weight: 600;
    color: transparent;
    position: absolute;
    -webkit-background-clip: text;
    -webkit-text-stroke: 2px;
    padding: 25px;
    background-image: linear-gradient(45deg, #4F46E5, #EECE1A, #3EAAAC);
    animation: textGradientShift 5s infinite linear;
}
*{
    scroll-behavior: smooth;
}
body{
    overflow-x: hidden;
}
.nav-bg{
    background-image: linear-gradient(to right,rgb(26, 15, 78) 3%,rgb(81, 26, 13) 40%,rgb(55, 4, 55) 90%);
}
.nav-link,.navbar-brand{
    color: aliceblue;
}
.nav-link{
    margin-right: 20px;
}
.navbar-brand:hover{
    color: white;
}
.navbar-toggler{
   border-color: aliceblue;
}
.nav-link:hover{
    color: grey;
}
.navbar-nav{
    margin: auto;
}
.navbar-collapse{
    text-align: center;
}
#home{
   position: relative;
   height: 800px;
}
#home img{
    height: 100%;
    width: 100%;
    object-fit: cover;
}
#education {
    background-image: url('img/synth.jpg');
    background-position: center;
    background-size: cover;
    padding-top: 80px;
    padding-bottom: 80px;
}

.education-item {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: -2px;
    margin-bottom: 30px;
}

.education-image {
    width: 100px;
    height: 100px;
    border-radius: 50%;
    overflow: hidden;
    margin-bottom: 10px;
    border-width: 4px;
    border-color: black;
}

.education-image img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.institution-name {
    color: white;
    font-size: 24px;
    font-weight: bold;
}

.period {
    color: #ddd;
    font-size: 18px;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
}

.degree {
    font-weight: 400;
    color: white;
    font-size: 18px;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
}

.intro {
    font-size: 80px;
    font-weight: 650;
    position: absolute;
    background-image: radial-gradient(ellipse, indigo 45%, #ee4b2b);
    color: transparent;
    background-clip: text;
    -webkit-background-clip: text;
    transform: translate(20px, -35px);
    color: transparent;
    animation: textGradientShift 5s infinite linear;
}
#aboutme {
    padding-top: 68px;
    padding-bottom: 60px;
    background-image: url('img/wall2.jpg');
    background-size: cover;
    background-position: center;
}

.intros {
    font-size: 90px;
    font-weight: 650;
    position: absolute;
    background-image: radial-gradient(ellipse, indigo 45%, #ee4b2b);
    color: transparent;
    background-clip: text;
    -webkit-background-clip: text;
    transform: translate(-630px, 550px);
}

.introme {
    margin-top: 10px;
    font-size: 80px;
    font-weight: 650;
    position: absolute;
    background-image: radial-gradient(ellipse, indigo 45%, #ee4b2b);
    color: transparent;
    background-clip: text;
    -webkit-background-clip: text;
    transform: translate(20px, -35px);
}

#skills {
    padding: 20px;
    display: inline-flex;
    justify-content: center;
    flex-wrap: wrap;
    margin-top: -10px;
    background-image: url('https://cdn.vectorstock.com/i/preview-1x/97/09/elegant-dark-background-of-blue-hue-with-smooth-vector-21499709.jpg');
    background-position: center;
    background-size: cover;
}

.skill-item {
    margin-right: 90px;
    margin-left: 90px;
    margin-top: 57px;
}

.skill-img-container {
    position: relative;
    width: 150px;
    height: 150px;
    margin-bottom: 20px;
    background-color: #f9f9f9;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
    border: 2px solid indigo;
    border-radius: 15%;
    overflow: hidden;
}

.skill-item h3 {
    font-family: Arial, Helvetica, sans-serif;
    text-align: center;
    font-size: 23px;
    font-weight: bold;
    margin-top: -20px;
    color: #ddd;
}

.skill-img-container img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.profile {
    display: flex;
    justify-content: flex-start;
    flex-wrap: wrap;
    margin-top: 138px;
    margin-left: 10px;
}

.profile-image {
    position: relative;
    width: 350px;
    height: 500px;
    margin-bottom: 20px;
    margin-left: 12px;
    margin-top: -30px;
    background-color: #f9f9f9;
    border: 1px solid #ddd;
    border-radius: 10px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
    overflow: hidden;
}

.profile-image img {
    width: 100%;
    height: 100%;
    display: block;
    object-fit: cover;
    border-bottom: 1px solid #ddd;
    border-radius: 10px 10px 0 0;
    height: 600px;
}

.link {
    position: absolute;
    top: 0;
    right: 0;
    transform: translate(-3%, 10%);
    background-color: transparent;
}

.link img {
    width: 80px;
    height: 80px;
    border-radius: 55%;
    background-color: transparent;
    border-color: transparent;
}

.lines {
    
    width: 800px;
    text-align: right;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-size: 42px;
    font-weight: 600;
    color: transparent;
    -webkit-background-clip: text;
    -webkit-text-stroke: 2px;
    transform: translate(280px, 10px);
    background-image: radial-gradient(ellipse, rgb(255, 248, 248) 15%, #b233f1 40%, rgb(255, 140, 0) 70%);
    animation: textGradientShift 5s infinite linear;
}

.icon1,
.icon2 {
    display: inline-flex;
    position: relative;
    transform: translateX(750px) translateY(-30px);
    background-color: transparent;
}

.icon1 img {
    width: 49px;
    height: auto;
    border-radius: 58%;
    background-color: transparent;
    border-color: transparent;
}

.icon2 img {
    width: 70px;
    height: auto;
    border-radius: 55%;
    background-color: transparent;
    border-color: transparent;
}

.tooltip1 {
    position: absolute;
    visibility: hidden;
    opacity: 0;
    background-color: #333;
    color: white;
    text-align: center;
    padding: 3px;
    border-radius: 5px;
    z-index: 1;
    transition: opacity 0.3s, visibility 0.3s;
    font-size: x-small;
    line-height: 7px;
    width: 90px;
    top: -75%;
    left: -45%;
}

.tooltip2 {
    position: absolute;
    visibility: hidden;
    opacity: 0;
    background-color: #333;
    color: white;
    text-align: center;
    padding: 3px;
    border-radius: 5px;
    z-index: 1;
    transition: opacity 0.3s, visibility 0.3s;
    font-size: x-small;
    line-height: 7px;
    width: 150px;
    top: -70%;
    right: -55%;
}

.tooltip2 h3 {
    font-size: 13px;
    margin-top: 2px;
    margin-bottom: 8px;
    font-weight: bold;
}

.tooltip2 p {
    margin-bottom: 6px;
}

.tooltip1 h3 {
    font-size: 13px;
    margin-top: 2px;
    margin-bottom: 8px;
    font-weight: 630;
}

.tooltip1 p {
    margin-bottom: 5px;
}

.icon1:hover .tooltip1 {
    visibility: visible;
    opacity: 1;
    transition: opacity 0.3s, visibility 0.3s, transform 0.3s;
}

.icon2:hover .tooltip2 {
    visibility: visible;
    opacity: 1;
    transition: opacity 0.3s, visibility 0.3s, transform 0.3s;
}

@media only screen and (max-width: 992px) {
    #home{
       transform: translateY(-120px); 
       object-fit: cover;
       margin-bottom: -120px;
    }
    .lines{
        transform: translate(-10px,0px);
        font-size: 35px;
        font-weight: 600;
        
    }
    .icon1,.icon2{
        transform: translate(80px,40px); 
    }
    .profile-image{
        position: relative;
        width: 350px;
        height: 480px;
        transform: translate(0px); 
        margin-top: -100px;
    }
    .icons{
        margin-left: 40px;
    }
    .introme{
        position: relative;
    }
    .intro{
        position: relative;
        font-size: 60px;
    }
    .education-item{
        text-align: center;
    }
    .intros{
        position: relative;
        transform: translate(-100px, 35px);
        margin-left: 100px;
    }
  }
  @media only screen and (min-width: 993px) and (max-width:1500px) {
    #home{
       transform: translateY(-50px); 
       object-fit: cover;
       margin-bottom: -50px;
    }
    .lines{
        font-size: 35px;
        font-weight: 600;
        transform: translate(10px);
        margin-left: 20px;
    }
    .icon1,.icon2{
        position: relative;
        transform: translate(190px,40px); 
    }
    .icons{
        margin-left: 250px;
    }
    .profile-image{
        position: relative;
        width: 350px;
        height: 480px;
        transform: translate(10px); 
    }
    .intro{
        position: relative;
    }
    .education-item{
        text-align: center;
    }
    .intros{
        position: relative;
        transform: translate(-100px, 35px);
        margin-left: 100px;
    }
  }

